# agentic-app-playground

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci-agent.yml  ci-infra.yml  ci-ui.yml  codeql.yml  dependency-audit.yml  image-scan.yml  required-checks.yml
agent/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  langgraph.json  pyproject.toml  requirements.txt  taxonomy.py
agent/tests/: test_agent.py
docs/: branch-protection.md  environments.md  first-deploy-checklist.md  frontend-frameworks.md
infra/: README.md
infra/bootstrap/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
infra/envs/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/envs/prod/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/modules/app/: README.md  main.tf  network.tf  outputs.tf  variables.tf  versions.tf
scripts/: cloud-bootstrap.ps1
ui/: .dockerignore  README.md  package.json  pnpm-lock.yaml
ui/apps/web/: .env.example  Dockerfile  next.config.mjs  package.json
ui/apps/web/src/app/: layout.tsx  page.tsx
ui/apps/web/src/app/api/agent/[...path]/: route.ts
ui/apps/web/src/app/api/upload/: route.ts
ui/apps/web/src/app/chat-aui/: page.tsx
ui/apps/web/src/app/report-preview/: openui-report.fixture.ts  openui-report.tsx  page.tsx
ui/apps/web/src/components/ai-elements/: artifact.tsx  inline-citation.tsx  loader.tsx  sources.tsx  tool.tsx
ui/apps/web/src/components/chat-aui/: message-converter.ts  runtime-provider.tsx  subagent-tool-ui.tsx  thread.tsx  tool-fallback.tsx
ui/apps/web/src/components/openui/: openui-error-boundary.tsx  openui-report-view.tsx
ui/apps/web/src/components/rfp/: chat-rail.tsx  compliance-matrix.tsx  outline-tree.tsx  progress-strip.tsx  rfp-workspace.tsx  source-viewer.tsx  upload-panel.tsx
ui/apps/web/src/components/thread/: index.tsx  markdown-text.tsx
ui/apps/web/src/components/thread/agent-inbox/: utils.ts
ui/apps/web/src/components/thread/agent-inbox/components/: state-view.tsx
ui/apps/web/src/components/thread/agent-inbox/hooks/: use-interrupted-actions.tsx
ui/apps/web/src/components/thread/messages/: ai.tsx  human.tsx  subagent-card.tsx  tool-call-views.tsx
ui/apps/web/src/components/thread/workspace/: agent-graph.tsx  artifact-canvas.tsx  artifact-report.tsx  files-panel.tsx  index.tsx  plan-panel.tsx  report-body.tsx
ui/apps/web/src/lib/: agent-types.ts  extract-sources.ts  report-files.ts  rfp-domains.ts  rfp-types.ts  use-compliance-matrix.ts
ui/apps/web/src/providers/: Stream.tsx
