[project]
name = "agent"
version = "0.1.0"
description = "Gemini (Vertex AI) deep agent that shreds customer RFPs into a compliance matrix."
# NOTE: no `readme` key on purpose — the Docker build context (.dockerignore)
# omits README.md, and hatchling errors if `readme` points at a missing file.
# create_agent lives in langchain.agents (LangChain 1.0+). 3.11 is the local
# dev version and is supported by every dep below; the upper bound keeps us
# off untested future majors while staying current on Cloud Run base images.
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }

# Compatible-release / lower-bound constraints only. We deliberately do NOT
# hard-pin here: the reproducible, fully-pinned + hashed set lives in the
# lockfile produced by `uv lock` (or `uv pip compile`). See requirements.txt
# and the notes for the lock workflow.
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-google-genai>=4.2,<5.0",
    "langgraph>=1.0,<2.0",
    # Deep Agents harness (planning, virtual filesystem, subagents) on top of
    # create_agent — this is what builds the compiled `agent` graph.
    "deepagents>=0.6,<0.7",
    # PDF text extraction for RFP ingestion (per-page text, traceability anchors).
    # Imported lazily in agent.py so module import stays hermetic.
    "pypdf>=5.0,<7.0",
    # Reads uploaded RFP PDFs from the GCS bucket. Imported lazily in agent.py so
    # the module imports without credentials (tests / CI / unconfigured envs).
    "google-cloud-storage>=2.18,<4.0",
    # Persistence is NOT an app dependency here. With the self-hosted standalone
    # Agent Server (decision D2), the server injects a durable Postgres-backed
    # checkpointer + store itself (configured via DATABASE_URI) and uses Redis
    # (REDIS_URI) for the task queue / pub-sub. The langgraph-api runtime and its
    # Postgres/Redis drivers ship in the `langchain/langgraph-api` base image.
    # Do NOT add langgraph-checkpoint-postgres / psycopg or a PostgresSaver in
    # agent.py — a hand-wired checkpointer conflicts with the server-managed one
    # (only needed if you set langgraph.json checkpointer.backend = "custom").
]

[project.optional-dependencies]
# Local serving / dev-only Agent Server with the in-memory checkpointer.
# Kept OUT of the runtime image: production uses the durable Postgres
# checkpointer, and langgraph-cli[inmem] pulls a heavy server stack.
# NOTE: unpinned on purpose. The 0.1.x line caps langgraph at <0.3, which
# conflicts with the langgraph>=1.0 core dep and makes `uv lock` unsolvable.
# This extra is local-dev-only (never in the runtime image), so we let the
# resolver pick a langgraph 1.x-compatible CLI.
inmem = [
    "langgraph-cli[inmem]",
]

# Optional LangSmith tracing. Enabled at runtime via LANGSMITH_TRACING +
# LANGSMITH_API_KEY (the key is injected from Secret Manager on Cloud Run).
# Lower bound bumped to satisfy deepagents (langsmith>=0.8.3); the modern
# langchain/langgraph 1.x stack ships langsmith on the 0.8.x line.
tracing = [
    "langsmith>=0.8.11,<0.9",
]

# Tooling for lint / format / type-check / test. Mirrors the [dependency-groups]
# 'dev' group below for tools (uv) that consume PEP 735 groups; the extra exists
# so plain `pip install .[dev]` also works in CI.
dev = [
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.0,<9.0",
]

# PEP 735 dependency group (native to `uv sync --group dev`).
[dependency-groups]
dev = [
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# agent.py and taxonomy.py are top-level modules (not a package); tell hatchling
# what to ship.
[tool.hatch.build.targets.wheel]
include = ["agent.py", "taxonomy.py", "langgraph.json"]

[tool.hatch.build.targets.wheel.force-include]
"agent.py" = "agent.py"
"taxonomy.py" = "taxonomy.py"

# --- Ruff: lint + format -----------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
# Don't lint the local Agent Server scratch dir or caches.
extend-exclude = [".langgraph_api", "__pycache__", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests may use fixtures / monkeypatch patterns that trip a few rules.
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# --- mypy --------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
# Third-party SDKs ship partial/none stubs; don't fail the build on them.
ignore_missing_imports = true
files = ["agent.py", "taxonomy.py", "tests"]

[[tool.mypy.overrides]]
# Tests use monkeypatch fixtures and dynamically-patched objects.
module = "tests.*"
disallow_untyped_defs = false

# --- pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
